// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ListTable component matches the snapshot 1`] = `
<ul
  className="ListTable__List-sc-1oyt4xr-0 gbioMK"
  role="list"
/>
`;

exports[`the ZebrafiedListTable component with multiple children matches the snapshot 1`] = `
<ul
  className="ListTable__List-sc-1oyt4xr-0 gbioMK"
  role="list"
>
  <li
    background="#f7f7f7"
  />
  <li
    background="#fff"
  />
</ul>
`;

exports[`the ZebrafiedListTable component with one child matches the snapshot 1`] = `
<ul
  className="ListTable__List-sc-1oyt4xr-0 gbioMK"
  role="list"
>
  <li
    background="#f7f7f7"
  />
</ul>
`;
